force-app/main/default/objects/cpm__Payment_Journey_Step__c/fields/cpm__Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>cpm__Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <type>TextArea</type>
</CustomField>