force-app/main/default/objects/cpm__Payment_Journey_Step__c/fields/cpm__Installment__c.field-meta.xml
<CustomField>
    <fullName>cpm__Installment__c</fullName>
    <label>Installment</label>
    <referenceTo>cpm__Installment__c</referenceTo>
    <relationshipLabel>Payment Journey Steps</relationshipLabel>
    <relationshipName>Payment_Journey_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>