force-app/main/default/objects/cpm__Payment_Journey_Step__c/fields/cpm__Payment_Journey_Rule__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Journey_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Journey Rule</label>
    <referenceTo>cpm__Payment_Journey_Rule__c</referenceTo>
    <relationshipLabel>Payment Journey Steps</relationshipLabel>
    <relationshipName>Payment_Journey_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>